can certain video and get audio.

--- a/styles.css
+++ b/styles.css
@@ -153,14 +153,15 @@ video{
     margin-inline: .5rem;
     cursor: pointer;
     display: flex;
+    background-color: rgba(100,100,100,.5);
     align-items: center;
 }
+
 .timeline-ctn:hover .timeline{ 
     height: 100%;
 }
 
 .timeline{ 
-    background-color: rgba(100,100,100,.5);
     height: 3px;
     width: 100%;
     position: relative;
@@ -173,40 +174,65 @@ video{
     top: 0; 
     bottom: 0; 
     right: calc (100% - var(--preview-position)*100%);
-    background-color: rbg(150,150,150);
+    background-color: red;
     display: none;
 }
 
 .timeline::after{
+    background-color: red;
     content: "";
     position: absolute; 
     left: 0; 
     top: 0; 
     bottom: 0; 
     right: calc (100% - var(--progress-position)*100%);
-    background-color: red;
 }
 
 .timeline .thumb-indicator{ 
-    --scale: 0; 
+    --scale: 2; 
+    background-color: red;
     position: absolute;
     height: 200%; 
     top: -50%; 
     transform: translateX(-50%) scale(var(--scale)); 
     left: calc(var(--progress-position) * 100%);
-    background-color: red;
     border-radius: 50%;
     transition: transform 150ms ease-in-out;
     aspect-ratio: 1/1;
 }
+.timeline .preview-img {
+    position: absolute;
+    height: 80px;
+    aspect-ratio: 16 / 9;
+    top: -1rem;
+    transform: translate(-50%, -100%);
+    left: calc(var(--preview-position) * 100%);
+    border-radius: .25rem;
+    border: 2px solid white;
+    display: none;
+  }
+  
+  .thumbnail-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+  }
+  
 
 .video-container.scrubbing .thumbnail-img{ 
     display: block;
 }
+
 .video-container.scrubbing .thumb-indicator,
 .timeline-ctn:hover .thumb-indicator{ 
     --scale:1;
 }
+
 .video-container.scrubbing .preview-img,
 .timeline-ctn:hover .preview-img{ 
     display: block;
@@ -216,33 +242,12 @@ video{
 .timeline-ctn:hover .timeline::before{ 
     display:block;
 }
+
 .video-container.scrubbing .timeline,
 .timeline-ctn:hover .timeline{ 
    height: 100%;
 }
 
-.timeline .preview-img{ 
-    position:absolute;
-    height: 80px; 
-    aspect-ratio: 16/9;
-    top: -1rem; 
-    transform: translate(-50%, -100%);
-    left: calc(var(--progress-position) * 100%);
-    border-radius: .25rem;
-    border: 2px solid white;
-    display: none;
-}
-
-.thumbnail-img{ 
-    position: absolute; 
-    top: 0; 
-    right: 0; 
-    left: 0; 
-    bottom: 0; 
-    width: 100%; 
-    height: 100%; 
-    display: none; 
-}
 
 /* Customize the slider track */
 .volume-slider::-webkit-slider-runnable-track {
